@@ -28,6 +28,8 @@
 	</scm>
 	<properties>
 		<java.version>17</java.version>
+		<sonar.projectKey>task-tracking</sonar.projectKey>
+		<sonar.host.url>http://localhost:9001</sonar.host.url>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -108,8 +110,20 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-
-			<plugin>
+			<!--<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<jvmArguments>
+						-Xms512m -Xmx1024m
+						-XX:+UseG1GC
+						-Xlog:gc*,gc+heap=info:file=${project.basedir}/logs/gc.log:time,uptime,level,tags
+						-XX:+HeapDumpOnOutOfMemoryError
+						-XX:HeapDumpPath=${project.basedir}/logs/heapdump.hprof
+					</jvmArguments>
+				</configuration>
+			</plugin>-->
+			<!--<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
 				<version>3.3.1</version>
@@ -121,10 +135,10 @@
 						</goals>
 					</execution>
 				</executions>
-			</plugin>
+			</plugin>-->
 
 			<!-- SpotBugs -->
-			<plugin>
+			<!--<plugin>
 				<groupId>com.github.spotbugs</groupId>
 				<artifactId>spotbugs-maven-plugin</artifactId>
 				<version>4.8.6.2</version>
@@ -136,10 +150,10 @@
 						</goals>
 					</execution>
 				</executions>
-			</plugin>
+			</plugin>-->
 
 			<!-- OWASP Dependency Check -->
-			<plugin>
+			<!--<plugin>
 				<groupId>org.owasp</groupId>
 				<artifactId>dependency-check-maven</artifactId>
 				<version>9.0.9</version>
@@ -150,7 +164,7 @@
 						</goals>
 					</execution>
 				</executions>
-			</plugin>
+			</plugin>-->
 
 		</plugins>
 	</build>
